--- a/data/preprocess_pbmc_data.ipynb
+++ b/data/preprocess_pbmc_data.ipynb
@@ -283,7 +283,9 @@
    "outputs": [],
    "source": [
     "l1_adata = adata[adata.obs['celltype.l1'].isin(['B', 'NK', 'Mono'])].copy()\n",
-    "l2_adata = adata[adata.obs['celltype.l2'].str.contains('B ')].copy()"
+    "l2_adata = adata[adata.obs['celltype.l2'].str.contains('B ')].copy()\n",
+    "l3_adata = adata[adata.obs['celltype.l1'] == 'CD4 T'].copy()\n",
+    "l4_adata = adata[adata.obs['celltype.l1'] == 'CD8 T'].copy()"
    ]
   },
   {
@@ -301,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm_method='CP10k' # alternatives '' for mean and 'median' for median \n",
+    "norm_method='mean' # alternatives '' for mean and 'median' for median \n",
     "sample_based=False # alternatives False for computation on entire dataset \n",
     "\n",
     "if norm_method=='median':\n",
@@ -463,6 +465,208 @@
    "source": [
     "l2_adata.write(fn_out_l2_data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Preprocess CD4 T-cell subtypes dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ac27b9f4c72a7adb"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "fn_out_l3_data= os.path.join(BASE_PATH_DATA, f'preprocessed/pp_pbmc_cd4_subtypes{appendix}.h5ad')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2961465b1a335308",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l3_adata.obs['celltype.l2'].value_counts().sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d31b2bc1b13d1aa6",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l3_adata"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b7ada6b6c79495f7",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l3_adata = preprocess_dataset(l3_adata, \n",
+    "                              shift_method = norm_method,\n",
+    "                              params_cell_filtering=dict(mad_tot_cnt=5, \n",
+    "                                                         mad_ngenes_cnt=5, \n",
+    "                                                         nr_top_genes=20,\n",
+    "                                                         mad_pct_cnt_top_genes=5,\n",
+    "                                                         mad_pct_mt=5,\n",
+    "                                                         min_pct_mt=9))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fe5cc2b45665ebb7",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l3_adata"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7eeecfbfd22cacef",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l3_adata.obs['celltype.l2'].value_counts().sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fff083a929f261a1",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l3_adata.write(fn_out_l3_data)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f9ce6b5d2649d81d",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Preprocess CD8 T-cell subtypes dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1ad8d954633b48b5"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "fn_out_l4_data= os.path.join(BASE_PATH_DATA, f'preprocessed/pp_pbmc_cd8_subtypes{appendix}.h5ad')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "33d7c5afa3afcfd6",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l4_adata.obs['celltype.l2'].value_counts().sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "addc23be1a522aa6",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l4_adata"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f08dbf7b3cb97a52",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l4_adata = preprocess_dataset(l4_adata, \n",
+    "                              shift_method = norm_method,\n",
+    "                              params_cell_filtering=dict(mad_tot_cnt=5, \n",
+    "                                                         mad_ngenes_cnt=5, \n",
+    "                                                         nr_top_genes=20,\n",
+    "                                                         mad_pct_cnt_top_genes=5,\n",
+    "                                                         mad_pct_mt=5,\n",
+    "                                                         min_pct_mt=9))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "42fd7f7d1b7999e7",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l4_adata"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cd37989741094876",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l4_adata.obs['celltype.l2'].value_counts().sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fe179929060a2b60",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "l4_adata.write(fn_out_l4_data)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e9b7eec6199e5bce",
+   "execution_count": null
   }
  ],
  "metadata": {
