Git changes in preprocessing and constant

--- a/data/preprocess_ovarian_n_skin_n_luad_kim_cancer.ipynb
+++ b/data/preprocess_ovarian_n_skin_n_luad_kim_cancer.ipynb
@@ -14,9 +14,10 @@
     "\n",
     "import pandas as pd\n",
     "import scanpy as sc\n",
+    "from scipy import sparse\n",
     "\n",
     "from constants import BASE_PATH_RAW_CANCER, BASE_PATH_DATA, BASE_PATH_ANNOT_CANCER, BASE_PATH_CANSIG_PP_CANCER\n",
-    "from scipy import sparse"
+    "from load_data_3ca import DATA3CA"
    ],
    "id": "1d0861a79a9bc2bc",
    "outputs": [],
@@ -155,7 +156,7 @@
    "cell_type": "code",
    "source": [
     "adata = adata[adata.obs['level2_celltype'].isin(['TSK', 'Tumor_KC_Basal', 'Tumor_KC_Cyc', 'Tumor_KC_Diff'])].copy()\n",
-    "adata.shape"
+    "adata.obs.level2_celltype.value_counts()"
    ],
    "id": "be5a92ba4652df30",
    "outputs": [],
@@ -177,6 +178,50 @@
     "    adata.write(Path(BASE_PATH_RAW_CANCER) / 'skin_malignant.h5ad')"
    ],
    "id": "a5750424fdbdb1ea",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "##### Look at the second skin example",
+   "id": "1e10072fd6939aed"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data_path = Path(BASE_PATH_DATA) / 'data_from_florian' / 'data' / 'skin_ji.h5ad'",
+   "id": "cf38e43ba4d14271",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "adata = sc.read_h5ad(data_path)",
+   "id": "11cc7fbc0b3ebf0c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "adata = adata[adata.obs['level2_celltype'].isin(['TSK', 'Tumor_KC_Basal', 'Tumor_KC_Cyc', 'Tumor_KC_Diff'])].copy()\n",
+    "adata.obs.level2_celltype.value_counts()"
+   ],
+   "id": "2d457f7b282b495a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "if SAVE:\n",
+    "    adata.write(Path(BASE_PATH_RAW_CANCER) / 'skin_malignant_2.h5ad')"
+   ],
+   "id": "acda86e67c696bac",
    "outputs": [],
    "execution_count": null
   },
@@ -209,6 +254,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "samples_in_adata = adata.obs.index.to_list()\n",
     "cell_labels = pd.read_table(Path(BASE_PATH_ANNOT_CANCER) / 'luad_kim' / \"GSE131907_Lung_Cancer_cell_annotation.txt\")\n",
     "cell_labels['Index'] = cell_labels['Index'].str.replace('_', '-')\n",
     "cell_labels = cell_labels.set_index('Index')\n",
@@ -248,7 +294,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "adata.obs[y_true_col].value_counts()",
+   "source": "adata.obs[y_true_col].value_counts().sort_index()",
    "id": "5086963ef0255275",
    "outputs": [],
    "execution_count": null
@@ -261,6 +307,113 @@
     "    adata.write(Path(BASE_PATH_CANSIG_PP_CANCER) / 'luad_kim_malignant.h5ad')"
    ],
    "id": "fa17c19a4d5209b7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Sencond version of luad kim directly downloaded from 3CA",
+   "id": "87e37f6c473e105d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "data_folder = Path(BASE_PATH_DATA) / \"curated_cancer_cell_atlas/luad_kim_2020/Data_Kim2020_Lung\"",
+   "id": "3f26384ae93cdf92",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "ds_obj = DATA3CA(data_folder)",
+   "id": "def273c309b3c95a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "ds_obj.validate_data_consistency()",
+   "id": "cc44f60f8e1e94a6",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "adata_2 = sc.AnnData(\n",
+    "    X=ds_obj.counts,\n",
+    "    obs=ds_obj.cells.reset_index().merge(ds_obj.metadata, on='sample').set_index('cell_name'),\n",
+    "    var=ds_obj.genes\n",
+    ")"
+   ],
+   "id": "939650f0c1cf9394",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "adata_2.X",
+   "id": "9df12ccc45900a56",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Only keep malignant cells\n",
+    "adata_2 = adata_2[adata_2.obs['cell_type'] == 'Malignant'].copy()"
+   ],
+   "id": "1605a443ecf3a9a7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "samples_in_adata = adata_2.obs.index.to_list()\n",
+    "cell_labels = pd.read_table(Path(BASE_PATH_ANNOT_CANCER) / 'luad_kim' / \"GSE131907_Lung_Cancer_cell_annotation.txt\")\n",
+    "cell_labels = cell_labels.set_index('Index')\n",
+    "cell_labels = cell_labels.loc[samples_in_adata, :]"
+   ],
+   "id": "3e54ca9083787c99",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "y_true_col = 'Cell_subtype'\n",
+    "sample_col = 'sample'\n",
+    "adata_2.obs[y_true_col] = cell_labels[y_true_col].str.lower()"
+   ],
+   "id": "9ef8b433c3f69c15",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "adata_2 = adata_2[adata_2.obs[adata_2.obs[y_true_col].str.startswith('ts', na=False)].index].copy()",
+   "id": "6f664f7b14c1f8f9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "if SAVE:\n",
+    "    adata.write(Path(BASE_PATH_CANSIG_PP_CANCER) / 'luad_kim_malignant_2.h5ad')"
+   ],
+   "id": "c89831d13f86a178",
    "outputs": [],
    "execution_count": null
   }
