--- a/notebooks/comparable_score_ranges/cancer_datasets/Ji_et_al_skin.ipynb
+++ b/notebooks/comparable_score_ranges/cancer_datasets/Ji_et_al_skin.ipynb
@@ -7,6 +7,9 @@
     "collapsed": true
    },
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import sys\n",
     "import warnings\n",
     "from collections import defaultdict\n",
@@ -445,9 +448,10 @@
     "                             hue_order=order_signatures, \n",
     "                             textwrap_width=9, \n",
     "                             sharey=False, \n",
-    "                             height=1.95, aspect=1.75, \n",
-    "                             wspace=0.125,\n",
-    "                             legend_bbox_anchor=(1.025, 1),\n",
+    "                             height=1.95, aspect=1.85, \n",
+    "                             wspace=0.1,\n",
+    "                             legend_bbox_anchor=(1.05, 1),\n",
+    "                             col_wrap=2,\n",
     "                             fontsizes=dict(title=12, labels=11, ticks=10, legend=11)\n",
     "                             )\n",
     "save_close_or_show(fig, SAVE, storing_path / \"violin_all_methods.pdf\")"
@@ -516,7 +520,7 @@
     "    ## Confusion matrix plot\n",
     "    # fig = plot_confusion_matrix(conf_mat, order_signatures, method_name, figsize=(3, 3), textwrap_width=7,\n",
     "    #                             xrotation=45, cbar=False)\n",
-    "    fig = plot_confusion_matrix(conf_mat, order_signatures, method_name, base_size=0.9, textwrap_width=8, fontsizes={'title': 12, 'labels': 11, 'ticks': 10, 'legend': 11})\n",
+    "    fig = plot_confusion_matrix(conf_mat, order_signatures, method_name)\n",
     "    save_close_or_show(fig, SAVE, storing_path / f'conf_mat_{method_name}.pdf')"
    ],
    "metadata": {
@@ -537,14 +541,6 @@
    "id": "fab5bba67ae9151b",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1300b5190c0a56d9"
   },
   {
    "cell_type": "markdown",
