--- a/notebooks/comparable_score_ranges/cancer_datasets/Wu_et_al_breast.ipynb
+++ b/notebooks/comparable_score_ranges/cancer_datasets/Wu_et_al_breast.ipynb
@@ -7,6 +7,8 @@
     "collapsed": true
    },
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import sys\n",
     "import warnings\n",
     "from collections import defaultdict\n",
@@ -365,8 +367,13 @@
     "fig = get_violin_all_methods(df_melted, \n",
     "                             y_true_col, \n",
     "                             hue_order=order_signatures, \n",
-    "                             textwrap_width=7, sharey=False, height=1.95, aspect=2, wspace=0.075,\n",
-    "                             legend_bbox_anchor=(1.075, 1,))\n",
+    "                             textwrap_width=7,\n",
+    "                             sharey=False, \n",
+    "                             height=1.95, \n",
+    "                             aspect=2.5, \n",
+    "                             wspace=0.075,\n",
+    "                             col_wrap=2,\n",
+    "                             legend_bbox_anchor=(1.125, 1,))\n",
     "plt.show(fig)\n",
     "# save_close_or_show(fig, SAVE, storing_path / \"violin_all_methods.pdf\")"
    ],
@@ -421,7 +428,7 @@
     "                                                               y_true_col=y_true_col,\n",
     "                                                               y_pred_col=lbl_col,\n",
     "                                                               label_names=order_signatures)\n",
-    "\n",
+    "    print(f\"{method_name} - balanced accuracy: {bal_acc:.3f}, f1 score: {f1_val:.3f}\")\n",
     "    scores = get_information_from_scores(adata, y_true_col=y_true_col, scores=method_scores, nfold=nfold)\n",
     "\n",
     "    metrics[method_name] = {\n",
@@ -433,8 +440,8 @@
     "    }\n",
     "\n",
     "    ## Confusion matrix plot\n",
-    "    fig = plot_confusion_matrix(conf_mat, order_signatures, method_name, figsize=(3, 3), textwrap_width=7,\n",
-    "                                xrotation=45, cbar=False)\n",
+    "\n",
+    "    fig = plot_confusion_matrix(conf_mat, order_signatures, method_name)\n",
     "    save_close_or_show(fig, SAVE, storing_path / f'conf_mat_{method_name}.pdf')"
    ],
    "metadata": {
@@ -445,13 +452,11 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
-   "source": [
-    "metrics_df = pd.DataFrame(metrics)"
-   ],
    "metadata": {
     "collapsed": false
    },
+   "cell_type": "code",
+   "source": "metrics_df = pd.DataFrame(metrics)",
    "id": "da940b899e4c9347",
    "outputs": [],
    "execution_count": null
