--- a/notebooks/comparable_score_ranges/create_plot.ipynb
+++ b/notebooks/comparable_score_ranges/create_plot.ipynb
@@ -7,7 +7,6 @@
     "collapsed": true
    },
    "source": [
-    "\n",
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.path as mpath\n",
@@ -15,7 +14,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from score_with_all_methods import save_close_or_show\n",
+    "from old.score_with_all_methods import save_close_or_show\n",
     "\n",
     "sns.set_style('ticks')\n",
     "\n",
